--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,7 +113,7 @@ dependencies {
         exclude group: 'com.google.guava', module: 'guava'
     }
     implementation 'com.mikepenz:actionitembadge:3.3.2@aar'
-    implementation "com.mikepenz:iconics-core:3.0.3@aar"
+    implementation 'com.mikepenz:iconics-core:4.0.0@aar'
     implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
 
     // Android support modules
