Add build number customization back

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,8 @@ android {
         targetSdkVersion 28
 
         versionName "2.972"    // digits of the *fractional part* shall NOT be > than "9"
-        versionCode 32
+        versionCode buildNumber.toInteger()
+
         // Third party devs:  pls be ethical and change the below keys
         buildConfigField 'String',   'YOUTUBE_API_KEYS_DEBUG', '"AIzaSyDU-ZZCyOB_kYkiMSZ6ooSipUZRukHU4ik"'
         buildConfigField 'String[]', 'YOUTUBE_API_KEYS',
