--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,8 +98,8 @@ dependencies {
         exclude group: 'com.google.http-client', module:'google-http-client-jackson2'
     }
 
-    implementation 'com.github.TeamNewPipe.NewPipeExtractor:extractor:v0.19.0'
-    //implementation 'com.github.gzsombor.NewPipeExtractor:extractor:41dd748cb3003cb2'
+    // implementation 'com.github.TeamNewPipe.NewPipeExtractor:extractor:v0.19.0'
+    implementation 'com.github.gzsombor.NewPipeExtractor:extractor:eaa49bfd57b10b940'
 
     // other modules
     implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '4.0.4.Final'
