--- a/app/src/extra/AndroidManifest.xml
+++ b/app/src/extra/AndroidManifest.xml
@@ -16,26 +16,133 @@
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
-			<intent-filter>
-				<action android:name="android.intent.action.VIEW" />
-
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-
-				<data android:scheme="http" />
-				<data android:scheme="https" />
-
-				<data android:host="youtube.com" />
-				<data android:host="m.youtube.com" />
-				<data android:host="www.youtube.com" />
-				<data android:host="youtu.be" />
-			</intent-filter>
 		</activity>
 		<activity
 			android:name="free.rm.skytube.gui.activities.YouTubePlayerActivity"
 			android:configChanges="orientation|keyboardHidden|screenSize"
 			android:theme="@style/VideoPlayerActivityTheme"
 			tools:node="replace">
+			<!-- Youtube filter -->
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+				<action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH"/>
+				<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data android:scheme="http"/>
+				<data android:scheme="https"/>
+				<data android:host="youtube.com"/>
+				<data android:host="m.youtube.com"/>
+				<data android:host="www.youtube.com"/>
+				<!-- video prefix -->
+				<data android:pathPrefix="/v/"/>
+				<data android:pathPrefix="/embed/"/>
+				<data android:pathPrefix="/watch"/>
+				<data android:pathPrefix="/attribution_link"/>
+				<!-- channel prefix -->
+				<data android:pathPrefix="/channel/"/>
+				<data android:pathPrefix="/user/"/>
+				<data android:pathPrefix="/c/"/>
+				<!-- playlist prefix -->
+				<data android:pathPrefix="/playlist"/>
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+				<action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH"/>
+				<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data android:scheme="http"/>
+				<data android:scheme="https"/>
+				<data android:host="youtu.be"/>
+				<data android:pathPrefix="/"/>
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+				<action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH"/>
+				<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data android:scheme="http"/>
+				<data android:scheme="https"/>
+				<data android:host="www.youtube-nocookie.com"/>
+				<data android:pathPrefix="/embed/"/>
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+				<action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH"/>
+				<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data android:scheme="vnd.youtube"/>
+				<data android:scheme="vnd.youtube.launch"/>
+			</intent-filter>
+
+			<!-- Hooktube filter -->
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+				<action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH"/>
+				<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data android:scheme="http"/>
+				<data android:scheme="https"/>
+				<data android:host="hooktube.com"/>
+				<data android:host="*.hooktube.com"/>
+				<!-- video prefix -->
+				<data android:pathPrefix="/v/"/>
+				<data android:pathPrefix="/embed/"/>
+				<data android:pathPrefix="/watch"/>
+				<!-- channel prefix -->
+				<data android:pathPrefix="/channel/"/>
+				<data android:pathPrefix="/user/"/>
+			</intent-filter>
+
+			<!-- Invidious filter -->
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+				<action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH"/>
+				<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data android:scheme="http"/>
+				<data android:scheme="https"/>
+				<data android:host="invidio.us"/>
+				<data android:host="dev.invidio.us"/>
+				<data android:host="www.invidio.us"/>
+				<data android:host="invidious.snopyta.org"/>
+				<data android:host="de.invidious.snopyta.org"/>
+				<data android:host="fi.invidious.snopyta.org"/>
+				<data android:host="vid.wxzm.sx"/>
+				<data android:host="invidious.kabi.tk"/>
+				<data android:host="invidiou.sh"/>
+				<data android:host="www.invidiou.sh"/>
+				<data android:host="no.invidiou.sh"/>
+				<data android:host="invidious.enkirton.net"/>
+				<data android:host="tube.poal.co"/>
+				<data android:host="invidious.13ad.de"/>
+				<data android:host="yt.elukerio.org"/>
+				<!-- video prefix -->
+				<data android:pathPrefix="/embed/"/>
+				<data android:pathPrefix="/watch"/>
+				<!-- channel prefix -->
+				<data android:pathPrefix="/channel/"/>
+				<data android:pathPrefix="/user/"/>
+				<!-- playlist prefix -->
+				<data android:pathPrefix="/playlist"/>
+			</intent-filter>
 		</activity>
 		<activity android:name="free.rm.skytube.gui.activities.NotificationClickActivity"></activity>
 	</application>
